Step1 : 1단계 - 자바8 스트림, 람다, Optional (#1459)
* refactor(test): 익명 클래스를 람다로 전환

* refactor(test): 익명 클래스를 람다로 전환

* refactor: 람다를 활용해 중복 제거

* refactor(test): 람다를 활용해 중복 제거

* refactor(test): 람다를 활용해 중복 제거

* refactor: 람다를 활용해 중복 제거

* refactor: Stream 실습1, 실습2

* refactor(test): Stream 실습1, 실습2

* refactor: Stream 실습2

* feat: 람다를 활용해 중복 제거

* refactor: Optional을 활용해 조건에 따른 반환

* refactor: Optional에서 값을 반환

* refactor: 사용하지 않는 임포트문 제거

* refactor: Optional에서 exception 처리

* docs: 람다 및 Stream, Optional 실습 테스트 작성